# uefiboot

./: CMakeLists.txt  README.md
gnu_efi/: Make.defaults  Makefile
gnu_efi/inc/: efilink.h
gnu_efi/lib/: Makefile  dpath.c
gnu_efi/lib/ia32/: setjmp.S
gnu_efi/lib/x86_64/: setjmp.S
include/: FrameworkMPService.h  MpService.h
src/: CMakeLists.txt  checkmp.cpp  data.c  first.cpp  first.h  hello.cpp  second.cpp
